--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dd-move",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "es/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "father-build"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,21 @@
     "url": "https://github.com/qianjunjian/dd-move/issues"
   },
   "homepage": "https://github.com/qianjunjian/dd-move#readme",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^17.0.2"
-  }
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "father-build": "^1.20.4"
+  },
+  "sideEffects": [
+    "**/*.css",
+    "**/*.less",
+    "./es/index.js"
+  ]
 }
